; ModuleID = '/home/carl/AnghaBench/darwin-xnu/san/extr_kasan-x86_64.c_alloc_page.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/san/extr_kasan-x86_64.c_alloc_page.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@shadow_pnext = common dso_local global i64 0, align 8
@I386_PGBYTES = common dso_local global i64 0, align 8
@shadow_ptop = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [11 x i8] c"KASAN: OOM\00", align 1
@shadow_pages_used = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 ()* @alloc_page to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @alloc_page() #0 {
  %1 = alloca i64, align 8
  %2 = load i64, i64* @shadow_pnext, align 8
  %3 = load i64, i64* @I386_PGBYTES, align 8
  %4 = add i64 %2, %3
  %5 = load i64, i64* @shadow_ptop, align 8
  %6 = icmp uge i64 %4, %5
  br i1 %6, label %7, label %9

7:                                                ; preds = %0
  %8 = call i32 @panic(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0))
  br label %9

9:                                                ; preds = %7, %0
  %10 = load i64, i64* @shadow_pnext, align 8
  store i64 %10, i64* %1, align 8
  %11 = load i64, i64* @I386_PGBYTES, align 8
  %12 = load i64, i64* @shadow_pnext, align 8
  %13 = add i64 %12, %11
  store i64 %13, i64* @shadow_pnext, align 8
  %14 = load i32, i32* @shadow_pages_used, align 4
  %15 = add nsw i32 %14, 1
  store i32 %15, i32* @shadow_pages_used, align 4
  %16 = load i64, i64* %1, align 8
  ret i64 %16
}

declare dso_local i32 @panic(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
